2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Update test
	  slightly

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: Add a test showing
	  that 'core' types don't preserve the object reference when
	  marshalling to/from native but custom types do.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows/DependencyPropertyTest.cs: A custom
	  registered dependencyproperty keeps the same object
	  reference when marshalling a string.

2009-07-22  Andreia Gaita  <avidigal@novell.com>

	* System.Windows.Browser/ScriptableTest.cs: reactivate scriptable
	tests, the bots should run them fine now.

2009-07-22  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ListBoxTest.cs: Add an extra test to
	  see if the object reference is always preserved

2009-07-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* site/test.html:
	* site/index.html: Add a big fat warning that these two files
	should be almost identical. Also make these files as identical
	as possible.

2009-07-21  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemsControlTest.cs: Add test for
	  setting ItemsControl.ItemsSource through xaml.

2009-07-21  Alan McGovern  <amcgovern@novell.com>

	* moon-unit.mdp:
	* System.Windows.Media/DoubleCollectionTest.cs:
	* System.Windows.Controls/ItemCollectionTest.cs: In order to
	  make ItemsControl function correctly, it has to box all
	  value types. This appears to break nothing but feels like a
	  bit of a hack. Without this, selection is broken in
	  itemscontrol for value types. 

2009-07-20  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.Controls/ItemCollectionTest.cs: Add a test
	  pinpointing why ListBox (and ComboBox) are broken.
	  ItemCollection.IndexOf () is not working correctly.

2009-07-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* System.Windows.Documents/GlyphsTest.cs: A few more asserts to